# Real_Roots_of_Cubic_Equation-Co-2014

./: CMakeLists.txt  README.md  main.cpp
excerpt/include/: excerpt.cpp
